Закончил мелкие доработки по регистрации

--- a/src/user/templates/userRegisterRecovery.tpl.html
+++ b/src/user/templates/userRegisterRecovery.tpl.html
@@ -12,7 +12,7 @@
     
     <div class="col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2">
     
-    <h1 class="mb-5">Восстановление пароля</h1>
+    <h1 class="mb-5">Сброс пароля</h1>
     
     <div id="alert-block" class="alert alert-danger" role="alert"<?=(!$process || !$form->getTextualErrors())?' style="display: none;"':''?>>
         <p class="mb-0" id="alert-block-content"><?=implode("<br />", $form->getTextualErrors())?></p>
