--- a/src/user/templates/userRegisterConfirm.tpl.html
+++ b/src/user/templates/userRegisterConfirm.tpl.html
@@ -12,7 +12,7 @@
     
     <div class="col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2">
     
-    <h1 class="mb-5">Восстановление пароля</h1>
+    <h1 class="mb-5">Сброс пароля</h1>
     
     <? if ($userExists instanceof User) { ?>
     
