--- a/src/user/templates/userRegisterLogin.tpl.html
+++ b/src/user/templates/userRegisterLogin.tpl.html
@@ -63,10 +63,18 @@
         </div>
         
         <div class="form-group row">
-            <div class="offset-sm-2 col-sm-10 d-flex justify-content-between align-items-center">
-                <button type="submit" class="btn btn-lg btn-success mr-2 mb-2">продолжить</button>
-                <button type="submit" name="cancel" class="btn btn-link mb-2 mr-2">отменить</button>
-                <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>" class="btn btn-link mb-2">восстановить пароль</a>
+            <div class="offset-sm-2 col-12 col-sm-10">
+                <div class="row align-items-center">
+                    <div class="col-sm-4 col-6 mb-2">
+                        <button type="submit" class="btn btn-lg btn-success">продолжить</button>
+                    </div>
+                    <div class="col-sm-4 col-6 d-flex justify-content-center mb-2">
+                        <button type="submit" name="cancel" class="btn btn-link">отменить</button>
+                    </div>
+                    <div class="col-sm-4 col-12 d-flex justify-content-center justify-content-sm-end mb-2 mt-3 mt-sm-0">
+                        <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>" class="btn btn-link mb-2">восстановить пароль</a>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
@@ -77,7 +85,7 @@
     
 <script>
 grecaptcha.ready(function() {
-    grecaptcha.execute('<?=GOOGLE_RECAPTCHA_OPEN?>', {action: 'registration'}).then(function(token) {
+    grecaptcha.execute('<?=GOOGLE_RECAPTCHA_OPEN?>', {action: 'login'}).then(function(token) {
         document.getElementById('google-response').value = token;
     });
 });
