--- a/src/user/templates/userRegisterLogin.tpl.html
+++ b/src/user/templates/userRegisterLogin.tpl.html
@@ -12,11 +12,11 @@
     }
 
     $form->
-        addWrongLabel('email', 'email указан неверно')->
-        addMissingLabel('email', 'email не указан')->
+        addWrongLabel('credentials', 'логин указан неверно')->
+        addMissingLabel('credentials', 'логин не указан')->
         addMissingLabel('password', 'пароль не указан')->
-        addCustomLabel('email', UserRegisterLoginCommand::ERROR_MISMATCH, 'email или пароль указаны неверно')->
-        addCustomLabel('email', UserRegisterLoginCommand::ERROR_BAN, 'учетная запись заблокирована'.$banMessage)->
+        addCustomLabel('credentials', UserRegisterLoginCommand::ERROR_MISMATCH, 'логин или пароль указаны неверно')->
+        addCustomLabel('credentials', UserRegisterLoginCommand::ERROR_BAN, 'учетная запись заблокирована'.$banMessage)->
         addWrongLabel('response', 'защита от автоматических действий не пройдена');
 ?>
 
@@ -49,10 +49,10 @@
     
     <form action="" method="POST" class="">
         <input type="hidden" name="response" value="" id="google-response" />
-        <div class="form-group row">
-            <label for="email" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
+        <div class="form-group row align-items-center">
+            <label for="credentials" class="col-sm-2 col-form-label col-form-label-lg">Email или телефон</label>
             <div class="col-sm-10">
-                <input id="email" class="form-control form-control-lg" name="email" value="<?=$form->getDisplayValue('email')?>" type="email">
+                <input id="credentials" class="form-control form-control-lg" name="credentials" value="<?=$form->getDisplayValue('credentials')?>" type="text">
             </div>
         </div>
         <div class="form-group row">
