--- a/src/user/templates/aclContextEditorUpdate.tpl.html
+++ b/src/user/templates/aclContextEditorUpdate.tpl.html
@@ -21,6 +21,7 @@
     </div>
     
     <form action="" method="POST">
+        <input type="hidden" name="securityCode" value="<?=$process?$form->getValue('securityCode'):$securityCode?>" />
         <div class="form-group row align-items-center">
             <label class="col-12 col-sm-2 col-form-label col-form-label-lg">Идентификатор</label>
             <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=$form->getValue('id')->getId()?></label>
