--- a/src/user/templates/parts/header.tpl.html
+++ b/src/user/templates/parts/header.tpl.html
@@ -16,6 +16,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="/i/bootstrap.min.js"></script>  
     
+    <script type="text/javascript" src="/i/jquery-ui.min.js"></script>    
+    <link rel="stylesheet" href="/i/jquery-ui.min.css" type="text/css" />
+    
     <script type="text/javascript" src="/i/file-upload/js/vendor/jquery.ui.widget.js"></script>
     <script type="text/javascript" src="/i/file-upload/js/jquery.iframe-transport.js"></script>
     <script type="text/javascript" src="/i/file-upload/js/jquery.fileupload.js"></script>
@@ -24,11 +27,11 @@
     <link rel="stylesheet" href="/i/gritter/css/jquery.gritter.css" type="text/css" />
     
     <script type="text/javascript" src="/i/jquery.colorbox.min.js"></script>
-    
+    <? /*
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/i18n/defaults-ru_RU.min.js"></script> 
-    
+    */ ?>
     <script type="text/javascript" src="/i/global.js"></script>
     
     <? foreach(Singleton::getInstance('HTMLMetaManager')->getStyleList() as $styleUrl) { ?>
