--- a/src/user/templates/userRegisterPhone.tpl.html
+++ b/src/user/templates/userRegisterPhone.tpl.html
@@ -2,6 +2,8 @@
     $partViewer->view('parts/header');
 
     $form->
+        addWrongLabel('name', 'имя указано неверно')->
+        addMissingLabel('name', 'имя не указано')->
         addWrongLabel('phone', 'номер телефона указан неверно')->
         addWrongLabel('code', 'код подтверждения телефона указан неверно')->
         addMissingLabel('phone', 'номер телефона не указан')->
@@ -32,6 +34,14 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label col-form-label-lg">Email</label>
             <label class="col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=$userEmail?></label>
+        </div>
+        
+        <div class="form-group row">
+            <label for="name" class="col-sm-2 col-form-label col-form-label-lg">Имя Отчество</label>
+            <div class="col-sm-10">
+                <input id="name" class="form-control form-control-lg" name="name" value="<?=$form->getDisplayValue('name')?>" type="name">
+                <small class="form-text text-muted">Ваше имя будет отображаться у Ваших предложений и в переписке с партнерами</small>
+            </div>
         </div>
         
         <div class="form-group row">
