--- a/src/user/templates/investorOfferEditorPublish.tpl.html
+++ b/src/user/templates/investorOfferEditorPublish.tpl.html
@@ -45,7 +45,6 @@
                         <input id="maxPeriod" size="4" class="form-control form-control-lg" name="maxPeriod" value="<?=$form->getDisplayValue('maxPeriod')?>" type="number" placeholder="макс.">
                         <div class="input-group-append"><span class="input-group-text" id="maxPeriodPrepend">мес.</span></div>
                     </div>
-                    <small class="form-text text-muted">Укажите минимальный и(или) максимальный срок, на который Вы готовы делать инвестиции</small>
                 </div>
             <? } else { ?>
                 <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold">
@@ -66,7 +65,6 @@
                         <input id="maxSumm" class="form-control form-control-lg" name="maxSumm" value="<?=$form->getDisplayValue('maxSumm')?>" type="text" placeholder="макс.">
                         <div class="input-group-append"><span class="input-group-text" id="maxSummPrepend">&#8381;</span></div>
                     </div>
-                    <small class="form-text text-muted">Укажите минимальную и максимальную сумму, которую Вы готовы инвестировать на указанный период</small>
                 </div>
             <? } else { ?>
                 <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold">
@@ -83,10 +81,25 @@
                         <input id="percents" size="4" class="form-control form-control-lg" name="percents" value="<?=$form->getDisplayValue('percents')?>" type="number" step="0.01">
                         <div class="input-group-append"><span class="input-group-text" id="percentsPrepend">% в мес</span></div>
                     </div>
-                    <small class="form-text text-muted">Укажите условия, на которых вы хотите инвестировать указанную сумму на указанный срок</small>
                 </div>
             <? } else { ?>
                 <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=sprintf("%0.2f", $form->getValue('id')->getPercents())?>% в мес</label>
+            <? } ?>
+        </div>
+        
+        <div class="form-group row align-items-center">
+            <label for="type" class="col-12 col-sm-2 col-form-label col-form-label-lg">Статус</label>
+            <? if ($form->exists('type')) { ?>
+                <div class="col-12 col-sm-10">
+                    <select name="type" id="type" class="form-control form-control-lg">
+                        <option <?=$form->exportValue('type')?'':' selected="selected"'?>></option>
+                        <? foreach(InvestorOfferType::getList(InvestorOfferType::create(InvestorOfferType::getAnyId())) as $type) { ?>
+                            <option value="<?=$type->getId()?>"<?=$form->exportValue('type') && $form->exportValue('type') == $type->getId()?' selected="selected"':''?>><?=htmlspecialchars($type->getName())?></option>
+                        <? } ?>
+                    </select>
+                </div>
+            <? } else { ?>
+                <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=htmlspecialchars($form->getValue('id')->getType()->getName())?></label>
             <? } ?>
         </div>
         
