--- a/src/user/templates/investorOfferEditorRestore.tpl.html
+++ b/src/user/templates/investorOfferEditorRestore.tpl.html
@@ -36,6 +36,11 @@
             <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=sprintf("%0.2f", $form->getValue('id')->getPercents())?>% в мес</label>
         </div>
         
+        <div class="form-group row align-items-center">
+            <label for="type" class="col-12 col-sm-2 col-form-label col-form-label-lg">Статус</label>
+            <label class="col-12 col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=htmlspecialchars($form->getValue('id')->getType()->getName())?></label>
+        </div>
+        
         <? if ($form->exists('comment')) { ?>
             <div class="form-group row align-items-center">
                 <label for="comment" class="col-12 col-sm-2 col-form-label col-form-label-lg">Комментарий</label>
