--- a/src/user/templates/adminUserList.tpl.html
+++ b/src/user/templates/adminUserList.tpl.html
@@ -7,7 +7,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="<?=CommonUtils::makeUrl('main')?>">Главная</a></li>
             <li class="breadcrumb-item"><a href="<?=CommonUtils::makeUrl('adminPanel')?>">Панель администратора</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Предложения инвесторов</li>
+            <li class="breadcrumb-item active" aria-current="page">Пользователи</li>
         </ol>
     </nav>
     
@@ -16,28 +16,23 @@
         <table class="table table-hover table-striped">
         <thead>
             <tr>
-                <th scope="col">Пользователь</th>
-                <th scope="col">Статус и Сумма</th>
-                <th scope="col">Срок</th>
-                <th scope="col">Условия</th>
-                <th scope="col">&nbsp;</th>
+                <th scope="col">Логин</th>
+                <th scope="col">Email</th>
+                <th scope="col">Телефон</th>
+                <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?><th scope="col">&nbsp;</th><? } ?>
             </tr>
         </thead>
         <tbody>
         <? foreach($list as $item) { ?>
-        <tr<?=$item->isActive()?'':' class="table-warning"'?>>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=$item->getUser()->getName()? htmlspecialchars($item->getUser()->getName()) : htmlspecialchars($item->getUser()->getEmail())?><?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><abbr title="<?=$item->getType()->getName()?>"><?=$item->getType()->getShortName()?></abbr> <?=$item->getMinSumm()? number_format($item->getMinSumm(), 0, '.', '&nbsp;').'&#8381; &ndash; ' : 'до '?><?=number_format($item->getMaxSumm(), 0, '.', '&nbsp;').'&#8381;'?><?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?>
-                <?=$item->getMinPeriod() ? ($item->getMaxPeriod() ? "{$item->getMinPeriod()}-{$item->getMaxPeriod()} мес" : "от {$item->getMinPeriod()} мес") : ($item->getMaxPeriod() ? "до {$item->getMaxPeriod()} мес" : "любой") ?>
-                <?=$item->isDeleted()?'</del>':''?>
-            </td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=sprintf("%0.2f", $item->getPercents())?>% в мес<?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle">
-                <? if ($item->checkPermissions(AclAction::PUBLISH_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => investorOfferEditor::ACTION_PUBLISH, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-check"></i></a><? } ?>
-                <? if ($item->checkPermissions(AclAction::DELETE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => CommandContainer::ACTION_DELETE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="far fa-trash-alt"></i></a><? } ?>
-                <? if ($item->checkPermissions(AclAction::RESTORE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => CommandContainer::ACTION_RESTORE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-undo-alt"></i></a><? } ?>
-            </td>
+        <tr>
+            <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=htmlspecialchars($item->getName())?><?=$item->isBan()?'</del>':''?></td>
+            <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=htmlspecialchars($item->getEmail())?><?=$item->isBan()?'</del>':''?></td>
+            <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=preg_replace("/^(\d{3})(\d{3})(\d{2})(\d{2})$/isu", "+7&nbsp;(\\1)&nbsp;\\2-\\3-\\4", $item->getPhone())?><?=$item->isBan()?'</del>':''?></td>
+            <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?>
+                <td class="align-middle">
+                    <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?><a href="<?=CommonUtils::makeUrl('adminUserEditor', array('action' => CommandContainer::ACTION_UPDATE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="far fa-edit"></i></a><? } ?>
+                </td>
+            <? } ?>
         </tr>
         <? } ?>
         </tbody>
