--- a/src/user/templates/aclGroupEditorUpdate.tpl.html
+++ b/src/user/templates/aclGroupEditorUpdate.tpl.html
@@ -46,7 +46,7 @@
         </div>
         
         <div class="form-group row align-items-top">
-            <label for="aclAction" class="col-12 col-sm-2 col-form-label col-form-label-lg">Права</label>
+            <label class="col-12 col-sm-2 col-form-label col-form-label-lg">Права</label>
             <div class="col-12 col-sm-10">
                 <? foreach($rightList as $i => $groupRight) { ?>
                     <div<?=$i-1==count($rightList)?'':' class="mb-3"'?>>   
