--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -8,11 +8,43 @@
         </ol>
     </nav>
         
-    <p>Авторизован как <strong><?=SecurityManager::getUser()->getEmail()?></strong> <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGOUT, 'return' => $curl))?>">выход</a></p>
+    <p>Авторизован как <strong><?=htmlspecialchars(SecurityManager::getUser()->getName())?></strong> <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGOUT, 'return' => $curl))?>">выход</a></p>
     
+    
+    <h1>Инвестор</h1>
     <p><a href="<?=CommonUtils::makeUrl('investorOfferList')?>">мои предложения инвестирования</a></p>
+    <p>Информация для тех, у кого есть опубликованные ивест. предложения:</p>
+    <ul>
+        <li>текущие сделки (активные) с планируемой доходностью</li>
+        <li>запросы денег (с перепиской)</li>
+        <li>рейтинг как инвестора и отзывы</li>
+        <li>история запросов и история сделок с фактической доходностью</li>
+    </ul>   
+    <hr />
     
+    <h1>Кредитор</h1>
     <p><a href="<?=CommonUtils::makeUrl('creditorList')?>">мои кредитные компании</a></p>
+    <p>Информация для тех, у кого есть размещенные кредитные организации</p>
+    <ul>
+        <li>текущие сделки (активные) с планируемой доходностью</li>
+        <li>запросы в работе (с перепиской слева и справа отдельно)</li>
+        <li>рейтинг как кредитора и заемщика и отзывы</li>
+        <li>история запросов и история сделок с фактической доходностью</li>
+        <li>просмотр текущих активных предложений от инвесторов</li>
+        <li>просмотр запросов от заемщиков</li>
+    </ul>  
+    
+    <hr />
+    
+    <h1>Заемщик</h1>
+    
+    <p>мои заявки на займ</p>
+    <ul>
+        <li>текущие сделки (активные) с датами и суммами предстоящих платежей</li>
+        <li>предложения от кредиторов (с перепиской)</li>
+        <li>рейтинг как заемщика и отзывы</li>
+        <li>история запросов и история сделок</li>
+    </ul>  
 </main>
 
 <? $partViewer->view('parts/header'); ?>
